Fix JPQL Query